--- a/index.html
+++ b/index.html
@@ -6,8 +6,45 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>2048</title>
     <script src="2048.js"></script>
+    <style media="screen">
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            font-size: 0;
+        }
+        li {
+            display: inline-block;
+            vertical-align: middle;
+            width: 60px;
+            height: 60px;
+            line-height: 60px;
+            text-align: center;
+            font-family: 'Microsoft Yahei';
+            font-weight: bold;
+            background: #eee;
+            color: #345;
+            border: 6px solid #bbada0;
+            border-width: 0 6px 6px 0;
+        }
+        ul li:first-child {
+            border-left-width: 6px;
+        }
+        ul:first-child li {
+            border-top-width: 6px;
+        }
+    </style>
 </head>
 <body>
+    <div class="wrapper">
+        <div class="top">
+            <h3>2048</h3>
+            <div>score</div>
+            <div>best score</div>
+        </div>
+        <div class="content">
 
+        </div>
+    </div>
 </body>
 </html>
